// Copyright 2022 The Engula Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package engula.proto.v1;

message Version {
    uint32 major_val = 1;
    uint32 minor_val = 2;
}

message ShardDescriptor {
    uint64 shard_id = 1;
    bytes start_key = 2;
    bytes end_key = 3;
}

message ReplicaDescriptor {
    uint32 node_id = 1;
    uint32 replica_id = 2;
}

message GroupDescriptor {
    uint64 group_id = 1;
    repeated ShardDescriptor shards = 2;
    repeated ReplicaDescriptor internal_replicas = 3;
}
